# schema-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  proto.rs  schema.rs
tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/__fixtures__/schemas/: bins.toml  shim-local.toml  shim-no-global.toml
tests/snapshots/: shims_test__can_create_local_shim.snap  shims_test__creates_global_shims.snap
