[package]
name = "schema_plugin"
version = "0.4.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "0.3.4"
proto_pdk = { version = "0.9.0" } # , path = "../../proto/crates/pdk" }
regex = "1.10.2"
serde = "1.0.190"
serde_json = "1.0.108"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.9.1", features = ["schema"] }
starbase_sandbox = "0.1.12"
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
