[package]
name = "schema_plugin"
version = "0.12.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.2.0"
proto_pdk = { version = "0.19.2" } #, path = "../../proto/crates/pdk" }
regex = { version = "1.10.4", default-features = false, features = [
	"std",
	"unicode-perl",
] }
serde = "1.0.203"
serde_json = "1.0.117"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.23.1", features = [
	"schema",
] } #, path = "../../proto/crates/pdk-test-utils" }
starbase_sandbox = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
